--- a/biere.css
+++ b/biere.css
@@ -1,34 +1,40 @@
 * {
     text-decoration: none;
-    list-style: none;
     margin: 0;
     padding: 0;
 }
 
 body {
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     background: linear-gradient(to right, #F1A159, #FFD2A8);
 }
 
 .contenu {
     display: grid;
     grid-template-columns: 50% 15% 35%;
-    grid-template-rows: 10% 80% 20%;
+    grid-template-rows: 1fr;
     height: 100%;
+    background-color: #D8CEC4;
+    grid-template-areas: 
+    "gauche vaguedroite droite"
+    ;
 }
 
-
+.vaguedroite{
+    grid-area: vaguedroite;
+}
 .gauche {
-    background-color: blue;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 4;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    grid-area: gauche ;
+    background: linear-gradient(to right, #F1A159, #FFD2A8);
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas: 
+    "titre titre"
+    "flèche texte"
+    "flèche rond";
+    height: ;
 }
 
 .image {
@@ -42,29 +48,27 @@ body {
 
 .droite {
     background-color: green;
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 4;
+grid-area: droite;
 }
 
 .vague {
-    grid-column-start: 1;
+    grid-column-start: 1;   
+   
 }
 
-#texte {
+.texte {
+    grid-area: texte;
     margin: 5%;
 }
 
-#rond img{
-    width: 100%;
+.rond img{
+    
 }
 
 .achat h4 {
     color: white;
     position: absolute;
-    top: 50%;
-    left: 50%;
+   
     transform: translate(-50%, -50%);
     z-index: 1;
 }
@@ -73,29 +77,31 @@ body {
     position: relative;
 }
 
-#rond img {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
 
-.icone img{
-    display: flex;
-}
 
-.icone {
-    display: flex;
-}
-
-#titre {
+.titre {
+    grid-area: titre;
     transform: rotate(-5deg);
-    font-size: 40px;
+    font-size: 40px; 
+    
 }
 
-#rond {
-    width: 80%;
+
+
+.flèche {
+    grid-area: flèche;
+ 
 }
 
-#flèche {
-    width: 40%;
+
+.sous-titre {
+    list-style-type: none;
+}
+
+.liste {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 40%;
 }
