--- a/public/css/trombibiere.css
+++ b/public/css/trombibiere.css
@@ -20,12 +20,20 @@ h1 {
 
 .image {
     width: 20%;
-
+    display: flex;
+    
 }
 
 .container {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 
 
+}
+
+h3 {
+    display: flex;
 
 }
