--- a/public/css/biere.css
+++ b/public/css/biere.css
@@ -12,8 +12,8 @@ body {
 section {
     display: grid;
     grid-template-columns: 50% 15% 35%;
-    grid-template-rows: 1fr;
-    height: 100%;
+    grid-template-rows: 700px;
+    height: 300px;
     grid-template-areas: 
     "gauche vaguedroite droite"
 }
@@ -28,18 +28,28 @@ section {
     "flèche texte"
     "flèche rond";
     width: 100%;
+    height: 300px;
 }
 .vaguedroite{
     grid-area: vaguedroite;
-    
+    height: 80%;
+    display: flex;
+    justify-content: flex-end;
+}
+.vaguedroite img{
+    height: 100%;
 }
 .droite {
     background-color: #D8CEC4;
     grid-area: droite;
+    height: 80%;
 }
 .texte {
     grid-area: texte;
-    margin: 5%;
+}
+.texte img{
+    width: 140%;
+    padding-right: 40%;
 }
 .rond img{
     width: 20%;
@@ -61,7 +71,6 @@ section {
     grid-area: titre;
     transform: rotate(-5deg);
     font-size: 30px; 
-    
 }
 .flèche {
     grid-area: flèche;
@@ -78,8 +87,5 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 40%;
-}
-.vague img{
-    width: 100%;
+    padding: 10%;
 }
