--- a/public/css/vulgarisation.css
+++ b/public/css/vulgarisation.css
@@ -16,13 +16,14 @@ body {
         "footer";
     background-color: #FFF2CB;
     width: 100%;
-    height: 5000px;
+    height: 6000px;
+    
 }
 
 section {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 310px 130px 700px 1700px 500px 450px 500px 200px;
+    grid-template-rows: 80px 300px 2000px 1700px 500px 450px 500px 0px;
     grid-template-areas:
         "cbeige"
         "vgris"
@@ -32,6 +33,7 @@ section {
         "vjaune"
         "vbeige";
     width: 100%;
+    height: 100%;
 }
 
 .vgris {
@@ -41,7 +43,7 @@ section {
     flex-direction: column-reverse;
 }
 .vrose{
-    background-color: #F6F2EF;
+    background-color: #ffffff;
     display: flex;
     flex-direction: column-reverse;
     justify-content: space-between;
@@ -50,6 +52,142 @@ section {
 .vrose h1{
     color: #77bdbf;
     font-size: calc(2rem + 2vw);
+}
+.houbl {
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+    position: relative; /* Ajouté pour le positionnement absolu */
+    width: 100%;
+}
+.houbl img {
+    height: 90%;
+}
+.hallertau img {
+    padding-left: 10%;
+}
+.saaz{
+    position: relative; /* Ajouté pour le positionnement absolu */
+}
+.txtsaaz {
+    position: absolute;
+    top: 0;
+    left: 1%;
+    padding: 10px;
+    width: 100%; /* Ajuste la largeur au conteneur parent */
+    height: 100%; /* Ajuste la hauteur au conteneur parent */
+    box-sizing: border-box;
+    text-align: center;
+    z-index: 2;
+}
+.hallertau{
+    position: relative; /* Ajouté pour le positionnement absolu */
+}
+.txthallertau{
+    position: absolute;
+    top: 0;
+    left: 10%;
+    padding: 10px;
+    width: 100%; /* Ajuste la largeur au conteneur parent */
+    height: 100%; /* Ajuste la hauteur au conteneur parent */
+    box-sizing: border-box;
+    text-align: center;
+    z-index: 2;
+}
+.brawersgold{
+    position: relative; /* Ajouté pour le positionnement absolu */
+}
+.txtbrawersgold{
+    position: absolute;
+    top: 0;
+    left: 1%;
+    padding: 10px;
+    width: 100%; /* Ajuste la largeur au conteneur parent */
+    height: 100%; /* Ajuste la hauteur au conteneur parent */
+    box-sizing: border-box;
+    text-align: center;
+    z-index: 2;
+}
+.malt{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: baseline;
+    position: relative; /* Ajouté pour le positionnement absolu */
+    width: 100%;
+}
+.paleale{
+    position: relative; /* Ajouté pour le positionnement absolu */
+}
+.txtpaleale{
+    position: absolute;
+    top: 0;
+    padding: 8.5% 1% 0% 48%;
+    width: 100%; /* Ajuste la largeur au conteneur parent */
+    height: 100%; /* Ajuste la hauteur au conteneur parent */
+    box-sizing: border-box;
+    text-align: center;
+    z-index: 2;
+}
+.paleale img{
+    width: 60%;
+    padding-left: 45%;
+}
+.avoine{
+    position: relative; /* Ajouté pour le positionnement absolu */
+}
+.txtavoine{
+    position: absolute;
+    top: 0;
+    left: 1%;
+    padding: 40% 36% 0% 14%;
+    width: 100%; /* Ajuste la largeur au conteneur parent */
+    height: 100%; /* Ajuste la hauteur au conteneur parent */
+    box-sizing: border-box;
+    text-align: center;
+    z-index: 2;
+}
+.avoine img{
+    width: 60%;
+    padding-left: 10%;
+    padding-top: 20%;
+}
+.carahell{
+    position: relative; /* Ajouté pour le positionnement absolu */
+}
+.txtcarahell{
+    position: absolute;
+    top: 0;
+    left: 1%;
+    padding: 32% 14% 0% 40%;
+    width: 100%; /* Ajuste la largeur au conteneur parent */
+    height: 100%; /* Ajuste la hauteur au conteneur parent */
+    box-sizing: border-box;
+    text-align: center;
+    z-index: 2;
+    
+}
+.carahell img{
+    width: 60%;
+    padding-left: 35%;
+    padding-top: 20%;
+}
+.pilsen{
+    position: relative; /* Ajouté pour le positionnement absolu */
+}
+.txtpilsen{
+    position: absolute;
+    top: 0;
+    left: 11%;
+    padding: 30px 10px;
+    width: 100%; /* Ajuste la largeur au conteneur parent */
+    height: 100%; /* Ajuste la hauteur au conteneur parent */
+    box-sizing: border-box;
+    text-align: center;
+    z-index: 2;
+}
+.pilsen img{
+    width: 125%;
 }
 .vbleu {
     grid-area: vbleu;
@@ -152,7 +290,7 @@ section {
     font-size: calc(2rem + 2vw);
 }
 .vbeige p{
-    padding: 0% 21%;
+    padding: 0% 21% 18.5% 21%;
     font-size: calc(0.3rem + 1.1vw);
     color: #ffffff;
     text-align: center;
@@ -191,16 +329,18 @@ section {
     color: #ffffff;
     text-align: center;
 }
-section div img {
+section div .v{
     width: 100%;
 }
-
 li {
     list-style: none;
 }
-
-header img {
+.logo {
     padding: 1% 1% 1% 2%;
+}
+.Panier{
+    padding: 1% 1% 1% 60%;
+    z-index: 6;
 }
 
 header {
@@ -208,21 +348,15 @@ header {
     justify-content: space-between;
     position: sticky;
     top: 0;
+    z-index: 5;
 }
 .cbeige h1{
     font-size: 4rem;
     position: absolute;
-    top: 4%;
+    padding-bottom: 20%;
     left: 27%;
     z-index: -1;
 }
-/*nav a,
-a:visited {
-    color: black;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-*/
 nav a{
     color: black;
 }
@@ -248,10 +382,7 @@ nav ul {
 #icons {
     cursor: pointer;
     display: none;
-    
-}
-div#icons {
-    z-index: 1;
+    z-index: 6; /* Assure que le bouton icône reste au-dessus de tout */
 }
 #icons {
     display: block;
@@ -264,6 +395,10 @@ div#icons {
 .active #icons:before {
     content: "\2715";
 }
+section.active{
+    Filter: blur(5px); /* Applique un flou de 5 pixels */
+}
+
 
 nav ul {
     position: fixed;
@@ -275,10 +410,11 @@ nav ul {
     text-align: center;
     transition: 0.25s;
     height: 100%;
+    z-index: 4;
 }
 
 nav li {
-    padding: 5% 0% 0% 8%;
+    padding: 4% 0% 0% 8%;
 }
 
 nav li:hover {
@@ -303,6 +439,7 @@ footer {
     display: flex;
     padding: 0;
     align-items: flex-end;
+    background-color: #FBCC54;
 }
 .wave img{
     width: 100%;
