--- a/public/css/headeretfooter.css
+++ b/public/css/headeretfooter.css
@@ -1,17 +1,24 @@
-/**** NAVBAR ****/
 li {
     list-style: none;
 }
-
-header img {
+.logo {
     padding: 1% 1% 1% 2%;
 }
-
+.Panier{
+    padding: 0% 0% 0% 29%;
+    z-index: 6;
+    align-self: center;
+}
+.Panier img{
+     width: 12%;
+    padding-left: 88%;
+}
 header {
     display: flex;
     justify-content: space-between;
     position: sticky;
     top: 0;
+    z-index: 5;
 }
 nav a{
     color: black;
@@ -19,6 +26,7 @@ nav a{
 nav a:hover {
     color: white;
 }
+/**** NAVBAR ****/
 nav {
     display: flex;
     justify-content: space-between;
@@ -27,33 +35,28 @@ nav {
     font-size: calc(1rem + 1.5vw);
     width: 5%;
 }
-
 nav ul {
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
 }
-
 #icons {
     cursor: pointer;
     display: none;
-    
-}
-div#icons {
-    z-index: 1;
+    z-index: 6; /* Assure que le bouton icône reste au-dessus de tout */
 }
 #icons {
     display: block;
 }
-
 #icons:before {
     content: "\2630";
 }
-
 .active #icons:before {
     content: "\2715";
 }
-
+section.active{
+    Filter: blur(5px); /* Applique un flou de 5 pixels */
+}
 nav ul {
     position: fixed;
     right: -100%;
@@ -64,22 +67,18 @@ nav ul {
     text-align: center;
     transition: 0.25s;
     height: 100%;
+    z-index: 4;
 }
-
 nav li {
-    padding: 5% 0% 0% 8%;
+    padding: 4% 0% 0% 8%;
 }
-
 nav li:hover {
     background: rgb(157, 217, 240);
 }
-
 nav.active ul {
     right: 0;
 }
-
 /**** FOOTER ****/
-
 footer {
     color: white;
     display: grid;
@@ -95,6 +94,7 @@ footer {
     display: flex;
     padding: 0;
     align-items: flex-end;
+    background-color: #FBCC54;
 }
 .wave img{
     width: 100%;
