--- a/public/css/vulgarisation.css
+++ b/public/css/vulgarisation.css
@@ -339,129 +339,6 @@ section {
 section div .v{
     width: 100%;
 }
-li {
-    list-style: none;
-}
-.logo {
-    padding: 1% 1% 1% 2%;
-}
-.Panier{
-    padding: 0% 0% 0% 29%;
-    z-index: 6;
-    align-self: center;
-}
-.Panier img{
-     width: 12%;
-    padding-left: 88%;
-}
-header {
-    display: flex;
-    justify-content: space-between;
-    position: sticky;
-    top: 0;
-    z-index: 5;
-}
-nav a{
-    color: black;
-}
-nav a:hover {
-    color: white;
-}
-/**** NAVBAR ****/
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1% 0% 1% 2%;
-    font-size: calc(1rem + 1.5vw);
-    width: 5%;
-}
-nav ul {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
-}
-#icons {
-    cursor: pointer;
-    display: none;
-    z-index: 6; /* Assure que le bouton icône reste au-dessus de tout */
-}
-#icons {
-    display: block;
-}
-#icons:before {
-    content: "\2630";
-}
-.active #icons:before {
-    content: "\2715";
-}
-section.active{
-    Filter: blur(5px); /* Applique un flou de 5 pixels */
-}
-nav ul {
-    position: fixed;
-    right: -100%;
-    top: 0%;
-    flex-direction: column;
-    background: #8FDBFF;
-    width: 50%;
-    text-align: center;
-    transition: 0.25s;
-    height: 100%;
-    z-index: 4;
-}
-nav li {
-    padding: 4% 0% 0% 8%;
-}
-nav li:hover {
-    background: rgb(157, 217, 240);
-}
-nav.active ul {
-    right: 0;
-}
-footer {
-    color: white;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 250px 200px;
-    grid-template-areas:
-    "wave wave wave"
-    "Infos Liens Contact"
-}
-.wave{
-    grid-area: wave;
-    width: 100%;
-    display: flex;
-    padding: 0;
-    align-items: flex-end;
+div .wave{
     background-color: #FBCC54;
-}
-.wave img{
-    width: 100%;
-}
-.Infos{
-    grid-area: Infos;
-    background-color: #000000;
-}
-.Liens{
-    grid-area: Liens;
-    background-color: #000000;
-}
-.Contact{
-    grid-area:Contact;
-    background-color: #000000;
-}
-footer div{
-    padding: 0% 4%;
-}
-footer li{
-    padding: 2% 0%;
-    display: flex;
-}
-footer li a{
-    color: #ffffff;
-}
-footer .Contact img{
-    width: 6%;
-    padding: 0% 2% 0% 0%;
 }
