--- a/public/css/Equipe.css
+++ b/public/css/Equipe.css
@@ -103,11 +103,11 @@ section{
     width: 48.7%;
     text-align: center;
 }
-#lili{
+#Lilirose{
     height: 33%;
     padding: 40% 15% 0% 0%;
 }
- #lisa{
+#Lisa{
     height: 33%;
     padding: 20% 0% 0% 15%;
 }
