--- a/public/css/Equipe.css
+++ b/public/css/Equipe.css
@@ -128,15 +128,15 @@ section{
     width: 26%;
     text-align: center;
 }
-#guigui{
+#Guilherme{
     height: 30%;
     padding: 5% 15% 0% 0%;
 }
- #sey{
+ #Seyma{
     height: 30%;
     padding: 5% 0% 0% 25%;
 }
-#nath{
+#Nathan{
     height: 30%;
     padding: 5% 15% 0% 0%;
 }
@@ -157,15 +157,15 @@ section{
     width: 48.5%;
     text-align: center;
 }
-#dimitri{
+#Dimitri{
     height: 30%;
     padding: 5% 15% 0% 0%;
 }
- #noélie{
+ #Noélie{
     height: 30%;
     padding: 5% 0% 0% 25%;
 }
-#pierre{
+#Pierre{
     height: 30%;
     padding: 5% 15% 0% 0%;
 }
