--- a/public/css/Avis.css
+++ b/public/css/Avis.css
@@ -14,12 +14,38 @@ body {
         "header"
         "main"
         "footer";
-    background-color: #FFF2CB;
     width: 100%;
-    height: 6000px;
-    
 }
-div .bibi{
+
+section {
+    display: grid;
+    background-color: #7BDDF4;
+    grid-template-columns: 1fr;
+    grid-template-rows: 6fr 600px;
+    grid-template-areas: 
+        "fondblue"
+        "vaguebi";
+}
+
+.fondblue {
+    grid-area: fondblue;
+    background-color: #7BDDF4;
+}
+
+.vaguebi {
+    display: flex;
+    flex-direction: column-reverse;
+    grid-area: vaguebi;
+    background-color: #7BDDF4;
+}
+.vaguebi img{
+    width: 100%;
+}
+
+div .bibi {
     background: linear-gradient(to right, #f1a159, #ffd2a8);
     border-radius: 10px;
+    width: 25%;
+    height: 400px;
+    margin-left: 2%;
 }
