--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -25,7 +25,8 @@ body {
 .bande {
     display: flex;
     justify-content: space-around;
-    margin-top: 150px;
+    margin-top: 50px;
+    padding: 50px 0;
     margin-bottom: 150px;
     background-color: #92CFEC;
 }
