--- a/public/css/headeretfooter.css
+++ b/public/css/headeretfooter.css
@@ -1,19 +1,22 @@
-<<<<<<< HEAD
 li {
     list-style: none;
 }
+
 .logo {
     padding: 1% 1% 1% 2%;
 }
-.Panier{
+
+.Panier {
     padding: 0% 0% 0% 29%;
     z-index: 6;
     align-self: center;
 }
-.Panier img{
-     width: 12%;
+
+.Panier img {
+    width: 12%;
     padding-left: 88%;
 }
+
 header {
     display: flex;
     justify-content: space-between;
@@ -21,12 +24,15 @@ header {
     top: 0;
     z-index: 5;
 }
-nav a{
+
+nav a {
     color: black;
 }
+
 nav a:hover {
     color: white;
 }
+
 /**** NAVBAR ****/
 nav {
     display: flex;
@@ -36,28 +42,37 @@ nav {
     font-size: calc(1rem + 1.5vw);
     width: 5%;
 }
+
 nav ul {
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
 }
+
 #icons {
     cursor: pointer;
     display: none;
-    z-index: 6; /* Assure que le bouton icône reste au-dessus de tout */
+    z-index: 6;
+    /* Assure que le bouton icône reste au-dessus de tout */
 }
+
 #icons {
     display: block;
 }
+
 #icons:before {
     content: "\2630";
 }
+
 .active #icons:before {
     content: "\2715";
 }
-section.active{
-    Filter: blur(5px); /* Applique un flou de 5 pixels */
+
+section.active {
+    Filter: blur(5px);
+    /* Applique un flou de 5 pixels */
 }
+
 nav ul {
     position: fixed;
     right: -100%;
@@ -70,133 +85,10 @@ nav ul {
     height: 100%;
     z-index: 4;
 }
+
 nav li {
     padding: 4% 0% 0% 8%;
 }
-nav li:hover {
-    background: rgb(157, 217, 240);
-}
-nav.active ul {
-    right: 0;
-}
-/**** FOOTER ****/
-footer {
-    color: white;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 250px 200px;
-    grid-template-areas:
-    "wave wave wave"
-    "Infos Liens Contact"
-}
-.wave{
-    grid-area: wave;
-    width: 100%;
-    display: flex;
-    padding: 0;
-    align-items: flex-end;
-     
-}
-.wave img{
-    width: 100%;
-}
-.Infos{
-    grid-area: Infos;
-    background-color: #000000;
-}
-.Liens{
-    grid-area: Liens;
-    background-color: #000000;
-}
-.Contact{
-    grid-area:Contact;
-    background-color: #000000;
-}
-footer div{
-    padding: 0% 4%;
-}
-footer li{
-    padding: 2% 0%;
-    display: flex;
-}
-footer li a{
-    color: #ffffff;
-}
-footer .Contact img{
-    width: 6%;
-    padding: 0% 2% 0% 0%;
-=======
-/**** NAVBAR ****/
-li {
-    list-style: none;
-}
-
-header img {
-    padding: 1% 1% 1% 2%;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    position: sticky;
-    top: 0;
-}
-nav a{
-    color: black;
-}
-nav a:hover {
-    color: white;
-}
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1% 0% 1% 2%;
-    font-size: calc(1rem + 1.5vw);
-    width: 5%;
-}
-
-nav ul {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
-}
-
-#icons {
-    cursor: pointer;
-    display: none;
-    
-}
-div#icons {
-    z-index: 1;
-}
-#icons {
-    display: block;
-}
-
-#icons:before {
-    content: "\2630";
-}
-
-.active #icons:before {
-    content: "\2715";
-}
-
-nav ul {
-    position: fixed;
-    right: -100%;
-    top: 0%;
-    flex-direction: column;
-    background: #8FDBFF;
-    width: 50%;
-    text-align: center;
-    transition: 0.25s;
-    height: 100%;
-}
-
-nav li {
-    padding: 5% 0% 0% 8%;
-}
 
 nav li:hover {
     background: rgb(157, 217, 240);
@@ -207,50 +99,58 @@ nav.active ul {
 }
 
 /**** FOOTER ****/
-
 footer {
     color: white;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 250px 200px;
     grid-template-areas:
-    "wave wave wave"
-    "Infos Liens Contact"
+        "wave wave wave"
+        "Infos Liens Contact"
 }
-.wave{
+
+.wave {
     grid-area: wave;
     width: 100%;
     display: flex;
     padding: 0;
     align-items: flex-end;
+
 }
-.wave img{
+
+.wave img {
     width: 100%;
 }
-.Infos{
+
+.Infos {
     grid-area: Infos;
     background-color: #000000;
 }
-.Liens{
+
+.Liens {
     grid-area: Liens;
     background-color: #000000;
 }
-.Contact{
-    grid-area:Contact;
+
+.Contact {
+    grid-area: Contact;
     background-color: #000000;
 }
-footer div{
+
+footer div {
     padding: 0% 4%;
 }
-footer li{
+
+footer li {
     padding: 2% 0%;
     display: flex;
 }
-footer li a{
+
+footer li a {
     color: #ffffff;
 }
-footer .Contact img{
+
+footer .Contact img {
     width: 6%;
     padding: 0% 2% 0% 0%;
->>>>>>> parent of 5df7e80 (View c'est ok je crois..)
 }
