Ablation du grid
footer header skyler

--- a/public/css/Equipe.css
+++ b/public/css/Equipe.css
@@ -9,9 +9,9 @@ main{
     height: fit-content;
 }
 body {
-    display: grid;
+    /* display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 140px 1fr 350px;
+    grid-template-rows: 140px 1fr 350px; */
     background-color: #F8F7E4;
     width: 100%;
     height: fit-content;
