--- a/public/css/headeretfooter.css
+++ b/public/css/headeretfooter.css
@@ -3,25 +3,33 @@ li {
 }
 
 .logo {
-    padding: 1% 1% 1% 2%;
+    /* padding: 1% 1% 1% 2%; */
+    width: 100px;
+    height: auto;
 }
 
 .Panier {
-    padding: 0% 0% 0% 29%;
+    /* padding: 0% 0% 0% 29%; */
     z-index: 6;
     align-self: center;
+    position: fixed;
+    right: 10%;
+    top: 20px;
 }
 
 .Panier img {
-    width: 12%;
-    padding-left: 88%;
+    width: 65px;
+    /* padding-left: 100%; */
 }
 
 header {
     display: flex;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
     justify-content: space-between;
     position: sticky;
-    top: 0;
+    top: 20px;
     z-index: 5;
 }
 
@@ -101,21 +109,35 @@ nav.active ul {
 /**** FOOTER ****/
 footer {
     color: white;
-    display: grid;
+    z-index: 2;
+    position: relative;
+    /* display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto 1fr;
     grid-template-areas:
-        "wave wave wave"
-        "Infos Liens Contact"
+    "wave wave wave"
+    "Infos Liens Contact" */
+}
+
+.skyler{
+     display: flex; 
+    padding-bottom:50px ;
+   justify-content: space-around;
+   width: 100%;
+   background-color: black;
 }
 
 .wave {
-    grid-area: wave;
+    /* grid-area: wave; */
+    top: 0;
+    transform: translateY(-100%);
     width: 100%;
     display: flex;
     padding: 0;
     align-items: flex-end;
-
+    background-color: rgba(0, 0, 0, 0);
+    /* margin-top: -95px; */
+    position: absolute;
 }
 
 .wave img {
@@ -123,26 +145,26 @@ footer {
 }
 
 .Infos {
-    grid-area: Infos;
+    /* grid-area: Infos; */
     background-color: #000000;
 }
 
 .Liens {
-    grid-area: Liens;
+    /* grid-area: Liens; */
     background-color: #000000;
 }
 
 .Contact {
-    grid-area: Contact;
+    /* grid-area: Contact; */
     background-color: #000000;
 }
 
 footer div {
-    padding: 0% 4%;
+    /* padding: 0% 4%; */
 }
 
 footer li {
-    padding: 2% 0%;
+    /* padding: 2% 0%; */
     display: flex;
 }
 
@@ -151,12 +173,13 @@ footer li a {
 }
 
 footer .Contact img {
-    width: 6%;
-    padding: 0% 2% 0% 0%;
+    width: auto;
+    height: 20px;
+    /* padding: 0% 2% 0% 0%; */
 }
 
-body{
+/* body{
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 140px 1fr 350px;
-}
+} */
