--- a/public/css/vulgarisation.css
+++ b/public/css/vulgarisation.css
@@ -7,16 +7,16 @@
 }
 
 body {
-    display: grid;
+    /* display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 140px 1fr 350px;
+    grid-template-rows: 140px 1fr auto;
     grid-template-areas:
         "header"
         "main"
-        "footer";
+        "footer"; */
     background-color: #FFF2CB;
     width: 100%;
-    height: 6000px;
+    /* height: 6000px; */
 
 }
 
